--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.ipartek</groupId>
-	<artifactId>GestionCandidatos</artifactId>
+	<groupId>com.ipartek.formacion.jonfraile</groupId>
+	<artifactId>GestionCandidatosJonFraile</artifactId>
 	<name>GestionCandidatosSpring</name>
 	<packaging>war</packaging>
-	<version>1.0.0-BUILD-SNAPSHOT</version>
+	<version>1.0.0-JONFRAILE</version>
 	<properties>
 		<java-version>1.6</java-version>
 		<org.springframework-version>4.3.2.RELEASE</org.springframework-version>
