--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 #DATABASE DATA
 mysql.driver=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/gc
+mysql.url=jdbc:mysql://localhost:3306/gc_jonfraile
 mysql.user=root
 mysql.pass=
