--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.ipartek.formacion</groupId>
-	<artifactId>GestionCandidatosEjercicio</artifactId>
+	<groupId>com.ipartek.formacion.josu</groupId>
+	<artifactId>GestionCandidatosEjercicioJosu</artifactId>
 	<name>GestionCandidatosEjercicio</name>
 	<packaging>war</packaging>
-	<version>1.0.0-BUILD-SNAPSHOT</version>
+	<version>1.0.0-JOSU</version>
 	<properties>
 		<java-version>1.6</java-version>
 		<org.springframework-version>4.3.2.RELEASE</org.springframework-version>
@@ -14,6 +14,8 @@
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<mysql.version>5.1.39</mysql.version>
 	</properties>
+	
+	
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -33,6 +35,23 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		
+		
+				<!-- PERSISTENCIA -->
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+		<!--  Dependencias para MySQL -->
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>${mysql.version} </version>
+		</dependency>
+		
 				
 		<!-- AspectJ -->
 		<dependency>
